# testing_rizzume

./: Dockerfile  Dockerfile.build  README.md  app.py  notes for rizzume.docx  pyproject.toml  requirements.txt  ~$tes for rizzume.docx
.github/workflows/: deploy.yml  main.yml
static/js/: testing.js
templates/: docx_upload4AI.html  index.html
testing_rizzume/: README.md
