[tool.poetry]
name = "testing-rizzume1"
version = "0.1.0"
description = ""
authors = ["mariooohzc <mariohanzel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
groq = "^0.8.0"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
